@@ -4,6 +4,7 @@ Jython 2.5.2rc3
   Bugs Fixed
     - [ 1674 ] PDB crashes under the JSR-223 scripting engine
     - [ 1680 ] jython -c option is not parsed right
+    - [ 1681 ] JSR-223, Jython 2.5.2 and implementing Java Interfaces from Python
       
 Jython 2.5.2rc2
   Bugs Fixed
